# ats

./: .gitignore  Dockerfile  README.md  deploy-dev.env  docker-compose.yml  pyproject.toml  requirements.txt
applicants/: models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
applicants/migrations/: 0001_initial.py  0002_remove_applicant_id_applicant_created_date_and_more.py
ats/: setup_demo_users.py  start_server.sh  urls.py
ats/applicants/: create_demo_users.py  models.py  permissions.py  serializers.py  tests.py  views.py
ats/applicants/fixtures/: demo_users.json  groups.json
ats/ats/: settings.py  urls.py
